Updated my details

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am training to be a full stack developer.</p>
+      <p>I am training to be a full stack web developer.</p>
       <h1>Where I'm From</h1>
       <p>United Kingdom</p>
       <h1>What are your favorite hobbies?</h1>
